--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ nav #menu-toggle {
   height: 25px;
   width: 25px;
   border-radius: 3px;
-  background-color: var(--secondary-bg);
+  background-color: var(--highlight);
   cursor: pointer;
   display: none;
 }
@@ -206,7 +206,7 @@ main {
 .introduction {
   /* background-color: var(--secondary-bg); */
   letter-spacing: 1px;
-  line-height: 1.3;
+  /* line-height: 1.3; */
 }
 
 .introduction .greet {
@@ -236,6 +236,7 @@ main {
 
 .introduction .me p {
   margin-bottom: 0.5rem;
+  font-size: 1rem;
 }
 
 .introduction .music-icon {
@@ -273,6 +274,10 @@ main {
 
   .introduction h2 {
     font-size: 2.6rem;
+  }
+
+  .introduction .me p {
+    font-size: 1.2rem;
   }
 
 }
